Finish project review

--- a/customer_segments/customer_segments.ipynb
+++ b/customer_segments/customer_segments.ipynb
@@ -314,7 +314,7 @@
     }
    ],
    "source": [
-    "# TODO: Select three indices of your choice you wish to sample from the dataset\n",
+    "# Select three indices of your choice you wish to sample from the dataset\n",
     "indices = [100, 200, 300]\n",
     "\n",
     "# Create a DataFrame of the chosen samples\n",
@@ -405,18 +405,18 @@
     "\n",
     "for feature in features:\n",
     "\n",
-    "    # TODO: Make a copy of the DataFrame, using the 'drop' function to drop the given feature\n",
+    "    # Make a copy of the DataFrame, using the 'drop' function to drop the given feature\n",
     "    new_data = data.copy().drop(feature, axis=1)\n",
     "\n",
-    "    # TODO: Split the data into training and testing sets(0.25) using the given feature as the target\n",
+    "    # Split the data into training and testing sets(0.25) using the given feature as the target\n",
     "    # Set a random state.\n",
     "    X_train, X_test, y_train, y_test = train_test_split(new_data, data[feature], test_size=0.25, random_state=random_state)\n",
     "\n",
-    "    # TODO: Create a decision tree regressor and fit it to the training set\n",
+    "    # Create a decision tree regressor and fit it to the training set\n",
     "    regressor = DecisionTreeRegressor(random_state=random_state)\n",
     "    regressor.fit(X_train, y_train)\n",
     "\n",
-    "    # TODO: Report the score of the prediction using the testing set\n",
+    "    # Report the score of the prediction using the testing set\n",
     "    score = regressor.score(X_test, y_test)\n",
     "    print(feature, score)"
    ]
@@ -510,7 +510,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1888ff33978>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21e6db1feb8>"
       ]
      },
      "execution_count": 6,
@@ -591,10 +591,10 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# TODO: Scale the data using the natural logarithm\n",
+    "# Scale the data using the natural logarithm\n",
     "log_data = np.log(data)\n",
     "\n",
-    "# TODO: Scale the sample data using the natural logarithm\n",
+    "# Scale the sample data using the natural logarithm\n",
     "log_samples = np.log(samples)\n",
     "\n",
     "# Produce a scatter matrix for each pair of newly-transformed features\n",
@@ -1508,13 +1508,13 @@
     "# For each feature find the data points with extreme high or low values\n",
     "for feature in log_data.keys():\n",
     "    \n",
-    "    # TODO: Calculate Q1 (25th percentile of the data) for the given feature\n",
+    "    # Calculate Q1 (25th percentile of the data) for the given feature\n",
     "    Q1 = np.percentile(log_data[feature], 25)\n",
     "    \n",
-    "    # TODO: Calculate Q3 (75th percentile of the data) for the given feature\n",
+    "    # Calculate Q3 (75th percentile of the data) for the given feature\n",
     "    Q3 = np.percentile(log_data[feature], 75)\n",
     "    \n",
-    "    # TODO: Use the interquartile range to calculate an outlier step (1.5 times the interquartile range)\n",
+    "    # Use the interquartile range to calculate an outlier step (1.5 times the interquartile range)\n",
     "    step = (Q3 - Q1) * 1.5\n",
     "    \n",
     "    outliers_df = log_data[~((log_data[feature] >= Q1 - step) & (log_data[feature] <= Q3 + step))]\n",
@@ -1662,7 +1662,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1678,11 +1680,11 @@
    "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "# TODO: Apply PCA by fitting the good data with the same number of dimensions as features\n",
+    "# Apply PCA by fitting the good data with the same number of dimensions as features\n",
     "pca = PCA(n_components=6)\n",
     "pca.fit(good_data)\n",
     "\n",
-    "# TODO: Transform log_samples using the PCA fit above\n",
+    "# Transform log_samples using the PCA fit above\n",
     "pca_samples = pca.transform(log_samples)\n",
     "\n",
     "# Generate PCA results plot\n",
@@ -1692,9 +1694,94 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dimension 1    0.4430\n",
+       "Dimension 2    0.2638\n",
+       "Dimension 3    0.1231\n",
+       "Dimension 4    0.1012\n",
+       "Dimension 5    0.0485\n",
+       "Dimension 6    0.0204\n",
+       "Name: Explained Variance, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca_results['Explained Variance']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dimension 1    0.4430\n",
+       "Dimension 2    0.7068\n",
+       "Dimension 3    0.8299\n",
+       "Dimension 4    0.9311\n",
+       "Dimension 5    0.9796\n",
+       "Dimension 6    1.0000\n",
+       "Name: Explained Variance, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(pca_results['Explained Variance'].cumsum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 5\n",
+    "\n",
+    "* How much variance in the data is explained* **in total** *by the first and second principal component? \n",
+    "* How much variance in the data is explained by the first four principal components? \n",
+    "* Using the visualization provided above, talk about each dimension and the cumulative variance explained by each, stressing upon which features are well represented by each dimension(both in terms of positive and negative variance explained). Discuss what the first four dimensions best represent in terms of customer spending.\n",
+    "\n",
+    "**Hint:** A positive increase in a specific dimension corresponds with an *increase* of the *positive-weighted* features and a *decrease* of the *negative-weighted* features. The rate of increase or decrease is based on the individual feature weights."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer:**\n",
+    "\n",
+    "- The first principal component explains 0.4430, and second principal component explains 0.2638, ie, 0.7068 of the variance in total.\n",
+    "\n",
+    "- The third component explains 0.1231, and fourth component explains 0.1012. The four components explain together 0.9310 of the variance.\n",
+    "\n",
+    "The visualization provided helps explaination about each component:\n",
+    "\n",
+    "- First principal component: a high value in the first component is relatively high in 'Milk', 'Grocery', 'Detergents_Paper'. These features were mentioned in the previous questions because of their correlations. \n",
+    "\n",
+    "- Second principal component: a value here is relatively low in 'Fresh', 'Frozen', 'Delicatessen'. It seems the inverse of the first, since it reduces the impact of the three features and increases the revelance of the others.\n",
+    "\n",
+    "- Third principal component: a high value is related to high values for 'Delicatessen', 'Frozen'.\n",
+    "\n",
+    "- Fourth principal component: a high value in this component is related to high values for 'Frozen', 'Detergents_Paper'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1809,77 +1896,13 @@
        "Dimension 6           -0.1824        0.0197  "
       ]
      },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7068"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca_results['Explained Variance'].iloc[0:2].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9310999999999999"
-      ]
-     },
      "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pca_results['Explained Variance'].iloc[0:4].sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Question 5\n",
-    "\n",
-    "* How much variance in the data is explained* **in total** *by the first and second principal component? \n",
-    "* How much variance in the data is explained by the first four principal components? \n",
-    "* Using the visualization provided above, talk about each dimension and the cumulative variance explained by each, stressing upon which features are well represented by each dimension(both in terms of positive and negative variance explained). Discuss what the first four dimensions best represent in terms of customer spending.\n",
-    "\n",
-    "**Hint:** A positive increase in a specific dimension corresponds with an *increase* of the *positive-weighted* features and a *decrease* of the *negative-weighted* features. The rate of increase or decrease is based on the individual feature weights."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Answer:**\n",
-    "\n",
-    "- The first and second principal components explain 0.7068 of the variance in total.\n",
-    "- The first four principal components already explain 0.9310 of the variance.\n",
-    "- The first principal component is highly related to the features 'Milk', 'Grocery', 'Detergents_Paper'. These features were mentioned in the previous questions because of their correlations. The second principal component seems the inverse of the first, since it reduces the impact of the three features and increases the revelance of the others. "
+    "pca_results"
    ]
   },
   {
@@ -1996,14 +2019,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Apply PCA by fitting the good data with only two dimensions\n",
+    "# Apply PCA by fitting the good data with only two dimensions\n",
     "pca = PCA(n_components=2)\n",
     "pca.fit(good_data)\n",
     "\n",
-    "# TODO: Transform the good data using the PCA fit above\n",
+    "# Transform the good data using the PCA fit above\n",
     "reduced_data = pca.transform(good_data)\n",
     "\n",
-    "# TODO: Transform log_samples using the PCA fit above\n",
+    "# Transform log_samples using the PCA fit above\n",
     "pca_samples = pca.transform(log_samples)\n",
     "\n",
     "# Create a DataFrame for the reduced data\n",
@@ -2102,7 +2125,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x18890445c88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21e6d60f320>"
       ]
      },
      "execution_count": 19,
@@ -2210,20 +2233,20 @@
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "for n_clusters in [2, 3, 4, 5, 6, 7, 8, 9]:\n",
-    "    # TODO: Apply your clustering algorithm of choice to the reduced data \n",
+    "    # Apply your clustering algorithm of choice to the reduced data \n",
     "    clusterer = KMeans(n_clusters=n_clusters, random_state=42)\n",
     "    clusterer.fit(reduced_data)\n",
     "\n",
-    "    # TODO: Predict the cluster for each data point\n",
+    "    # Predict the cluster for each data point\n",
     "    preds = clusterer.predict(reduced_data)\n",
     "\n",
-    "    # TODO: Find the cluster centers\n",
+    "    # Find the cluster centers\n",
     "    centers = clusterer.cluster_centers_\n",
     "\n",
-    "    # TODO: Predict the cluster for each transformed sample data point\n",
+    "    # Predict the cluster for each transformed sample data point\n",
     "    sample_preds = clusterer.predict(pca_samples)\n",
     "\n",
-    "    # TODO: Calculate the mean silhouette coefficient for the number of clusters chosen\n",
+    "    # Calculate the mean silhouette coefficient for the number of clusters chosen\n",
     "    score = silhouette_score(X=reduced_data, \n",
     "                             labels=clusterer.labels_, \n",
     "                             metric='euclidean')\n",
@@ -2276,20 +2299,20 @@
     }
    ],
    "source": [
-    "# TODO: Apply your clustering algorithm of choice to the reduced data \n",
+    "# Apply your clustering algorithm of choice to the reduced data \n",
     "clusterer = KMeans(n_clusters=2, random_state=42)\n",
     "clusterer.fit(reduced_data)\n",
     "\n",
-    "# TODO: Predict the cluster for each data point\n",
+    "# Predict the cluster for each data point\n",
     "preds = clusterer.predict(reduced_data)\n",
     "\n",
-    "# TODO: Find the cluster centers\n",
+    "# Find the cluster centers\n",
     "centers = clusterer.cluster_centers_\n",
     "\n",
-    "# TODO: Predict the cluster for each transformed sample data point\n",
+    "# Predict the cluster for each transformed sample data point\n",
     "sample_preds = clusterer.predict(pca_samples)\n",
     "\n",
-    "# TODO: Calculate the mean silhouette coefficient for the number of clusters chosen\n",
+    "# Calculate the mean silhouette coefficient for the number of clusters chosen\n",
     "score = silhouette_score(X=reduced_data, labels=clusterer.labels_, metric='euclidean')\n",
     "\n",
     "# Display the results of the clustering from implementation\n",
@@ -2376,10 +2399,10 @@
     }
    ],
    "source": [
-    "# TODO: Inverse transform the centers\n",
+    "# Inverse transform the centers\n",
     "log_centers = pca.inverse_transform(centers)\n",
     "\n",
-    "# TODO: Exponentiate the centers\n",
+    "# Exponentiate the centers\n",
     "true_centers = np.exp(log_centers)\n",
     "\n",
     "# Display the true centers\n",
